Fix figure layout issues
- ensure figures fill
- layout caption beneath figure

--- a/src/resources/formats/html/bootstrap/_bootstrap-rules.scss
+++ b/src/resources/formats/html/bootstrap/_bootstrap-rules.scss
@@ -2325,6 +2325,8 @@ code.sourceCode a.code-annotation-anchor {
 
   .card figure.quarto-float {
     display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .dashboard-scrolling {
